--- a/templates/index.html
+++ b/templates/index.html
@@ -71,19 +71,19 @@
           <th scope="row">1</th>
           <td>Age</td>
           <td>Persons age</td>
-          <td>Input integer of employees age</td>
+          <td>Input integer of employees age e.g. "35"</td>
         </tr>
         <tr>
           <th scope="row">2</th>
           <td>BusinessTravel</td>
           <td>How often an Employee travels</td>
-          <td>Input 1 if employee travels rarely, 2 if employee travels frequently, 3 if employee does not travel </td>
+          <td>Input a number from 1-3: 1 if employee travels rarely, 2 if employee travels frequently, 3 if employee does not travel e.g. "2"</td>
         </tr>
         <tr>
           <th scope="row">3</th>
           <td>DailyRate</td>
           <td>Employee daily rate</td>
-          <td>Input daily rate as an integer</td>
+          <td>Input daily rate as an integer e.g. "1470"</td>
         </tr>
       </tbody>
     </table>
